# igloo-mcp

./: .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .secrets.baseline  AGGRESSIVE_CLEANUP_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CITATION_BACKFILL_PLAN.md  CI_FIX_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  CONTRIBUTING.md  FINAL_SESSION_SUMMARY.md  GITHUB_ISSUES_CREATED.md  LINTER_IMPLEMENTATION_STATUS.md  README.md  RELEASE_NOTES_v0.3.2.md  REVIEW_SUMMARY.md  SYSTEM_TESTING_ANALYSIS.md  TESTING_COVERAGE_REVIEW_V032.md  TESTING_IMPROVEMENTS_SUMMARY.md  TESTING_PLAN_V032_GET_REPORT.md  TESTING_REVIEW_SUMMARY.md  TESTING_SPEC_PLAN_V032_CRITICAL_GAPS.md  TEST_CONSOLIDATION_PROGRESS.md  TEST_FIX_ACTION_PLAN.md  TEST_SUITE_ANALYSIS.md  building_a_mcp.md  conftest.py  external_ruff.py  pyproject.toml  tasks.py
.cursor/plans/: v-abf98c47.plan.md
.factory/droids/: agent_protocol_integration_droid.md  agentic_documentation_systems_droid.md  architecture_design_droid.md  development_workflow_optimization_droid.md  production_python_development_droid.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/: 5-minute-quickstart.md  agents.md  architecture.md  authentication.md  configuration.md  features_overview.md  getting-started.md  incremental_catalog_guide.md  index.md  installation.md  issue-2-plan.md  logging_analysis_2025-11-22.md  mcp-integration.md  mcp_diagnostic_tools.md  migration-guide.md  pr-31-32-release-plan.md  pr37_quality_review.md
docs/api/: ERROR_CATALOG.md  ERROR_HANDLING.md  PROGRESSIVE_DISCLOSURE.md  README.md  TOOLS_INDEX.md  errors.md
docs/api/tools/: build_catalog.md  build_dependency_graph.md  create_report.md  evolve_report.md  evolve_report_batch.md  execute_query.md  export_report.md  fetch_async_query_result.md  get_catalog_summary.md  get_report.md  get_report_schema.md  health.md  health_check.md  living_reports_errors.md  preview_table.md  query_lineage.md  render_report.md  search_catalog.md  search_report.md  test_connection.md
docs/architecture/: README.md  system-overview.md
docs/architecture/decisions/: 0001-snowcli-integration.md  0002-living-reports-design.md  README.md  template.md
docs/architecture/mcp/: protocol-architecture.md
docs/config/: mcp-client-config.example.json
docs/configuration/: ENVIRONMENT_VARIABLES.md
docs/examples/: catalog-examples.md
docs/known-issues/: tool-call-timeout-mismatch.md
docs/living-reports/: charts.md  citation-search.md  citations.md  technical-plan.md  user-guide.md
docs/mcp/: cursor-mcp-setup.md  mcp_architecture.md  mcp_server_technical_guide.md  mcp_server_user_guide.md
docs/releases/: 0.2.3-plan.md
docs/security/: session_parameters.md
examples/: README.md  run_depgraph.py
examples/reports/: flash_crash_report.yaml
examples/sample_data/: README.md  pipeline_documentation.md  setup_sample_data.py
new_user_test/: DOCUMENTATION_IMPROVEMENT_NOTES.md  simple_test.py  test_catalog_and_preview.py  test_catalog_summary.py  test_mcp_fixes.py  test_preview_with_snowflake.py
new_user_test/test_catalog_full/: catalog.json  catalog_summary.json
new_user_test/test_catalog_simple/: catalog.json  catalog_summary.json
plans/: GITHUB_ISSUE_html_standalone.md  api-completeness-batch.md  batched-quick-wins-and-critical-bugs.md  fix-living-reports-critical-bugs.md  fix-v0.3.3-failing-tests-and-update-docs.md  living-reports-html-standalone-renderer.md  v0.3.3-cleanup-and-release-plan.md  v0.3.3-release-api-completeness-and-critical-fixes.md  v0.3.4-implementation-plan.md  v0.3.4-production-hardening-plan.md
scripts/: check_critical_coverage.py  check_regression_tests.py  export_report_bundle.py  fix_relative_imports.py  real_timeout_test.py  smoke_timeout_test.py  validate_schema_compatibility.py
src/igloo_mcp/: __init__.py  circuit_breaker.py  cli.py  config.py  constants.py  error_handling.py  mcp_health.py  mcp_resources.py  mcp_server.py  parallel.py  path_utils.py  post_query_insights.py  profile_utils.py  query_optimizer.py  report_cli.py  services.py  session_utils.py  snow_cli.py  snow_rest.py  sql_objects.py  sql_validation.py
src/igloo_mcp/auth/: __init__.py  providers.py
src/igloo_mcp/cache/: query_result_cache.py
src/igloo_mcp/catalog/: catalog_service.py  index.py
src/igloo_mcp/lineage/: __init__.py  column_parser.py  logging_config.py
src/igloo_mcp/living_reports/: changes_schema.py  history_index.py  index.py  merge_utils.py  models.py  (+6 more)
src/snowflake_connector/: __init__.py
tests/: README.md  README_TEST_IMPROVEMENTS.md  TEMPLATE_integration.py  TEMPLATE_regression.py  __init__.py  conftest.py  test_api_completeness_id_tracking.py  test_api_completeness_integration.py  test_api_completeness_request_id_timing.py  test_api_completeness_warnings.py  test_auth_providers.py  test_ble_regression.py  test_build_catalog_timeout.py  test_build_dependency_graph_timeout.py  test_cache_golden_fixtures.py  test_catalog_service_offline.py  test_changes_schema.py  test_chart_management.py  test_circuit_breaker.py  test_citation_mapping.py  test_citation_model.py  test_cli_comprehensive.py  test_concurrent_operations.py  test_config.py  test_config_precedence.py  test_context.py  test_create_report_tool.py  test_critical_imports.py  test_data_integrity_regression.py  test_dependency_service.py  test_dependency_service_cli.py  test_deprecation_warnings.py  test_error_handling.py  test_error_handling_enhanced.py  test_evolve_report_batch.py  test_evolve_report_integration.py  test_evolve_report_mcp.py  test_evolve_report_tool.py  test_execute_query_additional.py  test_execute_query_branching.py  (+95 more)
tests/factories/: report_factory.py
tests/helpers/: __init__.py  cache_fixture_builder.py  fake_snowflake_connector.py  fixture_snow_cli.py  outline_factory.py  schema_validators.py
tests/system/: __init__.py  conftest.py  test_user_workflows.py
todos/: 001-pending-p2-replace-manual-html-escaping.md  002-pending-p1-cache-column-derivation-data-loss.md  003-pending-p1-cache-null-normalization.md  004-pending-p3-consolidate-result-mode-hints.md
(+55 files in other folders)
