[project]
 name = "igloo_mcp"
version = "0.3.2"
description = "Igloo MCP - Snowflake MCP Server for agentic native workflows"
readme = "README.md"
authors = [
    { name = "Evan Kim", email = "ekcopersonal@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["snowflake", "mcp", "ai", "data", "analytics", "model-context-protocol"]
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "snowflake-cli>=2.0.0",
    "sqlglot>=27.16.3",
    "pyjwt>=2.9.0",
    "pyvis>=0.3.2",
    "networkx>=3.0",
    "websockets>=15.0.1",
    "mcp>=1.0.0",
    "fastmcp>=2.8.1",
    "snowflake-labs-mcp>=1.3.3",
    "pydantic>=2.7.0",
    "jinja2>=3.1.0",
]

# MCP dependencies are included by default - no separate installation needed

[project.scripts]
# Primary entry point: MCP server for AI assistant integration
igloo_mcp = "igloo_mcp.mcp_server:main"
# Administrative entry point: CLI tools for power users and system administrators
igloo = "igloo_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/Evan-Kim2028/igloo-mcp"
Repository = "https://github.com/Evan-Kim2028/igloo-mcp"
Documentation = "https://github.com/Evan-Kim2028/igloo-mcp#readme"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-pyyaml>=6.0.12.20250822",
    "inline-snapshot>=0.10.1",
    "dirty-equals>=0.7.0",
    "pytest-examples>=0.0.11",
    "types-networkx>=3.2.0.20240731",
    "pytest-cov>=7.0.0",
    "trio>=0.26.0",
    "hypothesis>=6.90.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes by default
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with spaces, rather than tabs
indent-style = "space"
# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.pytest.ini_options]
# Pytest configuration
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Markers for test categorization
markers = [
    "requires_snowflake: marks tests requiring live Snowflake connection (skipped unless --snowflake)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (cross-component)",
    "system: marks system tests (end-to-end workflows)",
    "unit: marks unit tests (fast, isolated)",
    "performance: marks performance and scale tests",
]
# Default options (can override with CLI flags)
addopts = [
    "-ra",  # Show summary of all test outcomes
    "--strict-markers",  # Raise error on unknown markers
    "--strict-config",  # Raise error on config issues
    "--showlocals",  # Show local variables in tracebacks
]
# Asyncio configuration
asyncio_mode = "auto"
